Project

General

Profile

Actions

Bug #65862

open

rgw/cloud-transition: crash with notify->publish_commit

Added by Soumya Koduri 12 days ago. Updated 6 days ago.

Status:
Pending Backport
Priority:
Urgent
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
lifecycle cloud-transition notification backport_processed
Backport:
squid
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Below crash is observed while running cloud-transition tests at scale -

Thread 594 "wp_thrd: 1, 0" received signal SIGSEGV, Segmentation fault.
0x00007fc01918cccd in _memmove_evex_unaligned_erms () from /lib64/libc.so.6
(gdb) bt
#0 0x00007fc01918cccd in __memmove_evex_unaligned_erms () from /lib64/libc.so.6
#1 0x00007fc01b3a41d8 in std::char_traits<char>::copy (
_n=21934,
_s2=0x7fbeee8eeb10 "PV\244t\256U", __s1=0x55ae74c8c000 "")
at /usr/include/c++/13/bits/char_traits.h:445
#2 std::
_cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >::_S_copy
(_d=_d@entry=0x55ae74c8c000 "",
_s=_s@entry=0x55aee963ec30 <error: Cannot access memory at address 0x55aee963ec30>,
_n=_n@entry=21934) at /usr/include/c++/13/bits/basic_string.h:433
#3 0x00007fc01b3a4942 in std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >::_M_mutate (this=this@entry=0x7fbeee8eeb10, _pos=0, __len1=_len1@entry=0,
_s=0x55aee963ec30 <error: Cannot access memory at address 0x55aee963ec30>, __len2=21934)
at /usr/include/c++/13/bits/basic_string.tcc:333
#4 0x00007fc01b3a4a3a in std::
_cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >::_M_append (this=this@entry=0x7fbeee8eeb10, _s=<optimized out>,
__n=
_n@entry=21934) at /usr/include/c++/13/bits/basic_string.tcc:420
#5 0x00007fc01b3a4a58 in std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >::append (this=this@entry=0x7fbeee8eeb10, _s=<optimized out>,
__n=
_n@entry=21934) at /usr/include/c++/13/bits/basic_string.h:1460
#6 0x00007fc01b3a1bcc in ceph::buffer::v15_2_0::list::to_str[abi:cxx11]() const (
--Type <RET> for more, q to quit, c to continue without paging--
this=0x55ae74978c40) at /root/work/ceph/src/common/buffer.cc:1494
#7 0x000055ae6b792813 in LCOpAction_Transition::transition_obj_to_cloud (
this=this@entry=0x55ae7499ac60, oc=...) at /root/work/ceph/src/rgw/rgw_lc.cc:1448
#8 0x000055ae6b79300f in LCOpAction_Transition::process (this=0x55ae7499ac60, oc=...)
at /root/work/ceph/src/rgw/rgw_lc.cc:1495
#9 0x000055ae6b793a60 in LCOpAction_CurrentTransition::process (this=<optimized out>,
oc=...) at /root/work/ceph/src/rgw/rgw_lc.cc:1545
#10 0x000055ae6b77b30b in LCOpRule::process (this=this@entry=0x7fbeee8ef3f8, o=...,
dpp=<optimized out>, wq=wq@entry=0x55ae6d3a4010)
at /root/work/ceph/src/rgw/rgw_lc.cc:1661
#11 0x000055ae6b77b943 in operator() (_closure=0x55ae6d3a40f0, wk=0x55ae72185a40,
wq=0x55ae6d3a4010, wi=...) at /root/work/ceph/src/rgw/rgw_lc.cc:1747
#12 0x000055ae6b77bba3 in std::
_invoke_impl<void, RGWLC::bucket_lc_process(std::string&, LCWorker*, time_t, bool)::<lambda(RGWLC::LCWorker*, WorkQ*, WorkItem&)>&, RGWLC::LCWorker*, WorkQ*, boost::variant<void*, std::tuple<LCOpRule, rgw_bucket_dir_entry>, std::tuple<lc_op, rgw_bucket_dir_entry>, rgw_bucket_dir_entry>&> (_f=...) at /usr/include/c++/13/bits/invoke.h:61
#13 std::
_invoke_r<void, RGWLC::bucket_lc_process(std::string&, LCWorker*, time_t, bool)::<lambda(RGWLC::LCWorker*, WorkQ*, WorkItem&)>&, RGWLC::LCWorker*, WorkQ*, boost::variant<void*, std::tuple<LCOpRule, rgw_bucket_dir_entry>, std::tuple<lc_op, rgw_bucket_dir_entry>, rgw_bucket--Type <RET> for more, q to quit, c to continue without paging--q
Quit
(gdb) f 7
#7 0x000055ae6b792813 in LCOpAction_Transition::transition_obj_to_cloud (
this=this@entry=0x55ae7499ac60, oc=...) at /root/work/ceph/src/rgw/rgw_lc.cc:1448
1448 obj_state->attrset[RGW_ATTR_ETAG].to_str(),
(gdb) p obj_state
$1 = (RGWObjState *) 0x55ae7246f9e8
(gdb) p obj_state->attrset
$2 = std::map with 12 elements = {
[<error: Cannot access memory at address 0x55ae0000000f>] = {_buffers = {_root = {


Related issues 1 (1 open0 closed)

Copied to rgw - Backport #65999: squid: rgw/cloud-transition: crash with notify->publish_commitFix Under ReviewSoumya KoduriActions
Actions #1

Updated by Soumya Koduri 12 days ago

  • Status changed from New to Fix Under Review
  • Assignee set to Soumya Koduri
  • Priority changed from Normal to Urgent
  • Pull request ID set to 57356
Actions #2

Updated by Casey Bodley 6 days ago

  • Status changed from Fix Under Review to Pending Backport
  • Tags set to lifecycle cloud-transition notification
  • Backport set to squid
Actions #3

Updated by Backport Bot 6 days ago

  • Copied to Backport #65999: squid: rgw/cloud-transition: crash with notify->publish_commit added
Actions #4

Updated by Backport Bot 6 days ago

  • Tags changed from lifecycle cloud-transition notification to lifecycle cloud-transition notification backport_processed
Actions

Also available in: Atom PDF