rgw/cloud-transition: fix the crash with publish_commit

As part of cloud transition, object's head/attrs may get updated and hence
state->attrs will not be valid anymore. Fetch obj_state post the
transition to access the attrs.

Fixes: https://tracker.ceph.com/issues/65862
Resolves: rhbz#2279339

Signed-off-by: Soumya Koduri <skoduri@redhat.com>
(cherry picked from commit fa28bc2439cd7b9b994457eeec8bd6714ad31019)