src/rgw/rgw_lc.cc
@@ -1409,11 +1409,6 @@ public:
     auto& bucket = oc.bucket;
     auto& obj = oc.obj;
 
-    RGWObjState* obj_state{nullptr};
-    ret = obj->get_obj_state(oc.dpp, &obj_state, null_yield, true);
-    if (ret < 0) {
-      return ret;
-    }
 
     rgw::notify::EventTypeList event_types;
     if (bucket->versioned() && oc.o.is_current() && !oc.o.is_delete_marker()) {
@@ -1447,6 +1442,12 @@ public:
     if (ret < 0) {
       return ret;
     } else {
+      RGWObjState* obj_state{nullptr};
+      ret = obj->get_obj_state(oc.dpp, &obj_state, null_yield, true);
+      if (ret < 0) {
+        return ret;
+      }
+
       // send request to notification manager
       int publish_ret =  notify->publish_commit(oc.dpp, obj_state->size,
 				    ceph::real_clock::now(),
